# the-memory-palace

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
api/: app.py  ratelimit.py  session.py
frontend/static/: app.js  gameclient.js  index.html  styles.css
game/: __init__.py  bootstrap.py  gm.py  gossip.py  graph_models.py  ingest.py  loop.py  memory.py  models.py
scenario/: ravenwood.py
scripts/: ensure_graph.py  ingest_world.py  play.py  verify_cognee.py
